changed things for deploy

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: jacobsan
+  password: <%= ENV['DATABASE_PASSWORD'] %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -83,8 +85,6 @@ production:
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
     database: blog_production
-    username: blog
-    password: <%= ENV["BLOG_DATABASE_PASSWORD"] %>
   cache:
     <<: *primary_production
     database: blog_production_cache
